# Fraus

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pull_request_template.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml
demo/: demo.c  main.c  other.frag  phong.frag  phong.vert  shader.frag  shader.vert  text.frag  text.vert  vk_layer_settings.txt
fraus/: camera.c  camera.h  fraus.c  fraus.h  images.c  images.h  inflate_temp.c  inflate_temp.h  math.c  math.h  threads.c  threads.h  utils.h  vector.h  window.c  window.h
fraus/images/: images.c  images.h  inflate.c  inflate.h
fraus/include/fraus/: camera.h  fraus.h  input.h  math.h  threads.h  utils.h  vector.h  window.h
fraus/include/fraus/fonts/: fonts.h  reader.h
fraus/include/fraus/images/: images.h  inflate.h
fraus/include/fraus/models/: map.h  models.h
fraus/include/fraus/vulkan/: functions.h  include.h  object.h  utils.h  vulkan.h  vulkan_utils.h
fraus/models/: map.c  map.h  models.c  models.h
fraus/source/: camera.c  fraus.c  input.c  math.c  utils.c  window.c
fraus/source/fonts/: fonts.c  reader.c
fraus/source/images/: images.c  inflate.c
fraus/source/models/: map.c  models.c
fraus/source/vulkan/: functions.c  functions.h  object.c  spirv.c  spirv.h  vulkan.c  vulkan_utils.c
fraus/src/: camera.c  fraus.c  math.c  threads.c  window.c
fraus/src/images/: images.c  inflate.c
fraus/src/models/: map.c  models.c
fraus/src/vulkan/: object.c  utils.c  vulkan.c
fraus/vulkan/: functions.h  include.h  instance.c  instance.h  object.c  object.h  utils.c  utils.h  vulkan.c  vulkan.h
pages/: docs.html  footer.html  header.html  index.html  style.css  vars.css
tests/: tests.c
